fix menu button on ios

--- a/styles/lps/menu.less
+++ b/styles/lps/menu.less
@@ -41,8 +41,8 @@
 
   .menu-button{
     z-index: 3;
-    position: absolute;
-    top: 95%; //ok on ios
+    position: fixed;
+    top: 95vh; //ok on ios
     left: 80%;
     //transform: translate3d(0,0,10px);
 
